--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -85,7 +85,7 @@ button {
 	font-size: 1.75em;
 }
 .codrops-header {
-	padding: 3em 24% 4em;
+	padding: 3em 24% 0;
 	text-align: center;
 	h1 {
 		margin: 0.5em 0 0 0;
@@ -156,6 +156,7 @@ button {
 .codrops-demos {
 	margin: 2em 0 0;
 	font-size: 1.35em;
+	text-align: center;
 	a, nav {
 		cursor: pointer;
 		display: inline-block;
@@ -206,7 +207,7 @@ button {
 }
 @media screen and (max-width: 50em) {
 	.codrops-header {
-		padding: 3em 10% 4em;
+		padding: 3em 10% 0;
 	}
 }
 @media screen and (max-width: 40em) {
