--- a/client/views/welcome.jade
+++ b/client/views/welcome.jade
@@ -5,14 +5,14 @@ html.no-js(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title hangar - avto staff
     link(rel='shortcut icon', type='image/x-icon', href='/images/hangar.ico')
+    link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
     link(rel="stylesheet" href="styles/main.css")
   body
     .container
       header.codrops-header
         h1 Hangar
           span Avto staff products
-
-        app
+      app
 
   script(src="/js/vendor.js" type="text/javascript")
   script(src="/js/app.js" type="text/javascript")
