--- a/client/views/welcome.jade
+++ b/client/views/welcome.jade
@@ -12,7 +12,9 @@ html.no-js(lang='en')
       header.codrops-header
         h1 Hangar
           span Avto staff products
-      app
+      main-menu
+
+      #page_content
 
   script(src="/js/vendor.js" type="text/javascript")
   script(src="/js/app.js" type="text/javascript")
