--- a/client/views/partials/layout.jade
+++ b/client/views/partials/layout.jade
@@ -9,12 +9,15 @@ html.no-js(lang='en')
     link(rel="stylesheet" href="styles/main.css")
   body
     .container
+      
+      block user
+      
       header.codrops-header
         h1 Hangar
           span Avto staff products
-      welcome-menu
+        
+        block menu
+      
+    #page_content
 
-      #page_content
-
-  script(src="/js/vendor.js" type="text/javascript")
-  script(src="/js/welcome.js" type="text/javascript")
+  block scripts
