add table styles

--- a/client/views/welcome.jade
+++ b/client/views/welcome.jade
@@ -9,7 +9,7 @@ html.no-js(lang='en')
     link(rel="stylesheet" href="styles/main.css")
   body
     .container
-      header.codrops-header
+      header.codrops-header.padding-top-lg
         h1 Hangar
           span Avto staff products
       welcome-menu
