--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -85,7 +85,7 @@ button {
 	font-size: 1.75em;
 }
 .codrops-header {
-	padding: 3em 24% 0;
+	padding: 0 24% 0;
 	text-align: center;
 	h1 {
 		margin: 0.5em 0 0 0;
@@ -154,7 +154,6 @@ button {
 	}
 }
 .codrops-demos {
-	margin: 2em 0 0;
 	font-size: 1.35em;
 	text-align: center;
 	a, nav {
@@ -216,4 +215,13 @@ button {
 			font-size: 2.8em;
 		}
 	}
+}
+
+#page_content {
+	max-width: 900px;
+	margin: 0 20%;
+}
+
+* {
+	box-sizing: border-box;
 }
