--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -225,3 +225,14 @@ button {
 * {
 	box-sizing: border-box;
 }
+
+.form-group {
+	display: inline-block;
+
+	input.form-control {
+		padding: 5px 30px 5px 5px;
+	}
+	.form-icon{
+		margin-left: -30px;
+	}
+}
