user details + mysql

--- a/client/styles/common.less
+++ b/client/styles/common.less
@@ -2,8 +2,20 @@
     padding-top: 3em;
 }
 
-.margin-top-md {
-    margin-top: 2em;
+.margin {
+    &-top{
+        &-md{
+            margin-top: 2em;
+        }
+    }
+    &-bottom{
+        &-md{
+            margin-bottom: 2em;
+        }
+        &-xs{
+            margin-bottom: 5px;
+        }
+    }
 }
 
 .is-wide {
